--- a/credit-service/pom.xml
+++ b/credit-service/pom.xml
@@ -17,6 +17,13 @@
     <modelVersion>4.0.0</modelVersion>
     <name>auto insurance credit service</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.autoinsurance</groupId>
+            <artifactId>bounded-context</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
