--- a/bounded-context/pom.xml
+++ b/bounded-context/pom.xml
@@ -2,21 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <parent>
-        <groupId>com.autoinsurance</groupId>
-        <artifactId>auto-insurance-service</artifactId>
-        <version>MSA-version</version>
-    </parent>
 
+    <groupId>org.uengine</groupId>
+    <artifactId>auto-insurance-bounded-context</artifactId>
 
-
-    <groupId>com.autoinsurance</groupId>
-    <artifactId>bounded-context</artifactId>
-
-    <version>${parent.version}</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
     <name>auto insurance bounded context classes</name>
+
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
