--- a/bounded-context/pom.xml
+++ b/bounded-context/pom.xml
@@ -2,6 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+    <parent>
+        <groupId>com.autoinsurance</groupId>
+        <artifactId>auto-insurance-service</artifactId>
+        <version>MSA-version</version>
+    </parent>
 
     <groupId>org.uengine</groupId>
     <artifactId>auto-insurance-bounded-context</artifactId>
