--- a/dmv-service/pom.xml
+++ b/dmv-service/pom.xml
@@ -9,21 +9,15 @@
     </parent>
 
     <groupId>com.autoinsurance</groupId>
-    <artifactId>insurance-service</artifactId>
+    <artifactId>dmv-service</artifactId>
 
-    <version>${parent.version}</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
-    <name>auto insurance main service</name>
+    <name>Department of motor vehicle service</name>
 
     <dependencies>
-
-        <dependency>
-            <groupId>com.autoinsurance</groupId>
-            <artifactId>shared-kernel</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -32,6 +26,7 @@
 
 
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
