--- a/marketing-service/src/main/resources/application.yml
+++ b/marketing-service/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 ---
 spring:
   profiles: local
+  cloud:
+    stream:
+      kafka:
+        binder:
+          brokers: localhost:9092
+      bindings:
+        insurance-topic:
+          destination: insurance.topic
+          contentType: application/json
 
 server:
   port: 8080
