--- a/dmv-service/pom.xml
+++ b/dmv-service/pom.xml
@@ -15,7 +15,7 @@
 
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
-    <name>Department of motor vehicle service</name>
+    <modelName>Department of motor vehicle service</modelName>
 
     <dependencies>
 
