--- a/insurance-service/pom.xml
+++ b/insurance-service/pom.xml
@@ -14,7 +14,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
-    <name>Auto insurance</name>
+    <modelName>Auto insurance</modelName>
 
     <dependencies>
         <dependency>
