--- a/proxy-service/src/main/resources/application.yml
+++ b/proxy-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: zuul-router
+    modelName: zuul-router
 
 
 server:
@@ -9,6 +9,7 @@ server:
 
 zuul:
   addProxyHeaders: true
+  ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
 
   routes:
     customer:
@@ -18,6 +19,10 @@ zuul:
     vehicle:
       path: /vehicles/**
       serviceId: insurance-service
+      stripPrefix: false
+    credit:
+      path: /credits/**
+      serviceId: credit-service
       stripPrefix: false
 
 endpoints:
